# DesafioBRY

./: .env  .gitignore  CMakeLists.txt  README.md  assinatura.p7s  conanfile.txt
.github/workflows/: release.yml
src/: DigestService.cpp  DigestService.h  Server.cpp  SignerService.cpp  SignerService.h  Utils.h  VerifierService.cpp  VerifierService.h  main.cpp
tests/: DigestServiceTests.cpp  SignerServiceTests.cpp  VerifierServiceTests.cpp
